@@ -44,6 +44,8 @@ version 2.0.0:
 	* The Evolution Integration plugin now supports Groupwise contacts
 	* Use libao for playing sounds via NAS instead of accessing NAS
 	  directly
+	* Yahoo! buddy requests to add you to their buddy list now prompt for
+	  authorization.
 
 	Bug fixes:
 	* People using input methods can now use Enter again.
